--- a/package.json
+++ b/package.json
@@ -2,5 +2,26 @@
   "dependencies": {
     "axios": "^1.13.2",
     "zustand": "^5.0.8"
-  }
+  },
+  "name": "pismonosa",
+  "version": "1.0.0",
+  "description": "",
+  "main": "index.js",
+  "devDependencies": {},
+  "scripts": {
+    "build": "npm install --prefix backend && npm install --prefix frontend && npm run build --prefix frontend",
+    "start": "npm run start --prefix backend"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/PetarTuranovic/Pismonosa.git"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "type": "commonjs",
+  "bugs": {
+    "url": "https://github.com/PetarTuranovic/Pismonosa/issues"
+  },
+  "homepage": "https://github.com/PetarTuranovic/Pismonosa#readme"
 }
